2001-05-04  John Harper  <jsh@eazel.com>

	* sawfish/wm/state/gnome.jl (gnome-event-proxyer): support
	`OffN' events
	* sawfish/wm/util/decode-events.jl: ditto

	* sawfish/wm/keymaps.jl (title-keymap): bind
	toggle-window-shaded to an X-Off2 binding instead of X-Click2

2001-04-22  John Harper  <jsh@eazel.com>

	Fixed bug 4250 (pointer can confuse focus follows mouse when
	cycling):

	* sawfish/wm/focus.jl (focus-ignore-pointer-events): new
	variable. When true, pointer in/out events have no effect on
	the input focus

	* sawfish/wm/commands/x-cycle.jl (cycle-begin): while cycling
	set focus-ignore-pointer-events to true. Don't restore it to
	false until 100ms after the cycling finishes (so that any
	pointer out events generated by, e.g., removing the message
	window are ignored)

2001-04-22  John Harper  <jsh@eazel.com>

	* sawfish/wm/viewport.jl (set-viewport): rewrote the code that
	changes viewports. It now tries to order the window moves in
	such a way as to minimize redundant pointer in/out and expose
	events. The ordering algorithm was suggested by Jan Kasprzak
	<kas@informatics.muni.cz> last September

2001-04-20  John Harper  <jsh@eazel.com>

	* sawfish/wm/state/gnome.jl (gnome-property-handler): monitor
	_WIN_AREA as well as _WIN_WORKSPACE. This definitely
	fundamentally flawed, but can be useful in some cases..

	Extra i18n work. Adapted from a patch by Vlad Harchev
	<hvv@hippo.ru>

	* sawfish/wm.jl (i18n-defvar, i18n-define): new macros, expand
	to a `defvar' or `define'. Just used to mark variables that
	need special attention when extracting translatable strings

	* sawfish/wm/ext/match-window.jl: import sawfish.wm instead of
	a bunch of specific modules, so we get i18n-defvar. Then use it
	when declaring match-window-x-properties and
	match-window-properties

2001-04-17  John Harper  <jsh@eazel.com>

	* sawfish/wm/ext/beos-window-menu.jl (make-label): surround the
	name in parentheses if the window is on a different viewport as